<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="welcome_text">Welcome To ALC 4.0</string>
    <string name="btn_txt_about_alc">About ALC</string>
    <string name="btn_txt_my_profile">My Profile</string>
    <string name="slack_username">Nigel</string>
    <string name="name">Nigel Chomba</string>
    <string name="track">Track:</string>
    <string name="country">Country:</string>
    <string name="email">Email:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="slack_user_name">Slack Username:</string>
</resources>
